# Pololu-Maestro

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README  README.md  libusc.pro  setup.py
.github/workflows/: ccpp.yml
examples/: ConfigurationFile.cpp  ConfigurationFile.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  QxChannelStatus.cpp  QxChannelStatus.h  examples.pro  lsusc.c  main.cpp
firmwares/: CMakeLists.txt  FirmwareUpgradeUtility.py  README.md  upgrade_firmware.py  usc02a_v1.04.pgm  usc03a_v1.03.pgm  usc03b_v1.03.pgm  usc03c_v1.03.pgm
libmaestro/: CMakeLists.txt  libmaestro.cpp  libmaestro.h
libusc/: libusc.c  libusc.h  libusc.pro
python/: CMakeLists.txt  example.py  maestro.cpp
src/: CMakeLists.txt
src/maestro/: Device.cpp  Device.h  Instruction.cpp  Instruction.h  Opcode.h  Program.cpp  Program.h
